--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+:root{
+  --tablet-breakpoint: 1152px;
+  --mobile-breakpoint: 736px;
+}
+
+body{
+  letter-spacing: 0.0375rem;
+  line-height: 2;
+}
+
 html{
   box-sizing: border-box;
   font-size: 16px; /* 1rem */
@@ -22,6 +32,7 @@ img{
   display: block;
   max-width: 100%;
   height: auto;
+  object-fit: cover;
 }
 
 h1 {
@@ -29,7 +40,7 @@ h1 {
   line-height: 1.1;
 }
 h2 {
-  font-size: clamp(2.5rem, 3.5vw, 3rem);
+  font-size: clamp(2rem, 3.5vw, 3rem);
   line-height: 1.15;
 }
 h3 {
@@ -52,7 +63,10 @@ h6 {
 .p{
  margin: 0 0 2rem 0
 }
-
+strong, p{
+  font-weight: 600;
+  color: #000000;
+}
 .wrapper{
   position: relative;
   padding: 0 0 10rem 0;
@@ -77,7 +91,10 @@ h6 {
 
 .wrapper section {
   display: flex;
-
+  margin: 7.5rem 0 0 0;
+  &:first-child{
+    margin-top: 0;
+  }
   & > * {
     width: 50%;
   }
@@ -90,7 +107,11 @@ h6 {
   gap: 3rem;
   text-align: end;
   position: relative;
-  padding: 4rem 10rem 0 5rem
+  padding: 0 10rem 0 5rem
+}
+
+.intro .first{
+  padding-top: 4rem;
 }
 
 
@@ -98,10 +119,10 @@ h6 {
   content: "";
   display: block;
   width: 2px;
-  height: 100%;
+  height: calc(100% + 15rem);
   background: #43d9b8;
   position: absolute;
-  top: 4.5rem;
+  top: 5rem;
   left: calc(100% - 5rem);
 }
 
@@ -146,7 +167,10 @@ a.next:before{
 
 .heading{
     position: relative;
-    font-size: 5rem;
+}
+
+.intro .heading{
+  font-size: 5rem;
 }
 
 .heading:before{
@@ -156,7 +180,7 @@ a.next:before{
   height: 2px;
   background: #43d9b8;
   right: -5rem;
-  top: 2.5rem;
+  top: 3rem;
 }
 
 .heading:after {
@@ -167,7 +191,7 @@ a.next:before{
     border-radius: 50%;
     background: #43d9b8;
     right: -2.5rem;
-    top: 2.35rem;
+    top: 2.75rem;
 }
 
 a{
@@ -185,8 +209,66 @@ a{
   text-decoration: none;
 }
 
-.second img{
-  object-fit: cover;
+.second{
+  max-width: 60rem;
+  padding: 0 4rem;
+  line-height: 2;
+}
+
+.intro .second{
+  padding:0;
+}
+
+.intro .second img{
   height: 100vh;
 }
+
+.main{
+  h2{
+    font-size: 1.5rem;
+  }
+  .heading::before {
+    top: 0.75rem
+  }
+  .heading::after {
+    top: 0.5rem
+  }
+}
+
+.main-img{
+  margin-top: 3rem;
+}
+
+@media screen and (max-width: 1152px) {
+  .wrapper section {
+    flex-direction: column;
+  }
+  .heading:before, .heading:after, a.next, .first:before{
+    display: none;
+  }
+  .wrapper section {
+    & > * {
+      width: 100%;
+    }
+  }
+  .wrapper:before{
+    width: 100%;
+  }
+  .first > * {
+    margin-left: 0;
+    width: 100%;
+    max-width: 25rem;
+  }
+  .first{
+    padding: 8rem 4rem 5rem 4rem;
+    text-align: start;
+  }
+
+  .wrapper section{
+    margin: 6rem 0 0 0;
+  }
+
+
+
+  }
 
